<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.MisLigasFragment">

    <!-- Botones -->
    <Button
        android:id="@+id/btnCrearLiga"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#3E9B04"
        android:text="Crear nueva liga"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnSimularPartido"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#0061A9"
        android:text="Simular jornada"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnTerminarLiga"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_rounded_background"
        android:backgroundTint="#B90B0B"
        android:text="Terminar liga"
        android:textColor="#FFFFFF" />

    <!-- Título de Noticias -->
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Noticias TuOnce"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="#dddddd"
        android:textColor="#222222"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/bottom_navigation_height"
        android:layout_margin="8dp" />

</LinearLayout>
