<!-- res/layout/fragment_crear_liga.xml -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".view.fragments.CrearLigaPersonalizadaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="440dp"
            android:layout_height="395dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.842"
            tools:context=".CrearLiga">

            <TextView
                android:id="@+id/textViewLiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Liga" />

            <EditText
                android:id="@+id/editTextNumJornadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="Ingrese el número de jornadas"
                android:inputType="numberDecimal"
                android:minHeight="64dp"
                android:textColor="#FF0000"
                android:textColorHint="#A9A9A9"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnConfirmarLigaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_rounded_background"
                android:backgroundTint="#3E9B04"
                android:gravity="center"
                android:text="Confirmar"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnAtrasLigaP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_rounded_background"
                android:backgroundTint="#B90B0B"
                android:gravity="center"
                android:text="Atrás"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="431dp"
            android:layout_height="214dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="335dp"
            android:layout_height="117dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="47dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:text="Crear Liga personalizada"
            android:textColor="#FF0000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.507"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextNombreLiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Ingrese el nombre de la liga"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#A9A9A9"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>